[package]
name = "iconator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
fst = "0.4.7"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
fst = "0.4.7"

[dev-dependencies]
hegeltest = "0.2"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
